--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,13 +13,15 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity android:name=".ui.StartActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
