--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,6 +38,12 @@
         <activity
             android:name=".ui.DataStatisticsActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.IndexListActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.GreenDataActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
