--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,9 @@
         <activity
             android:name=".ui.GreenDataActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.TemperatureActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
